crud for library category
