# library-app/internal/models/models.go
@@ -1,0 +1,14 @@
+package models
+
+import "gorm.io/gorm"
+
+func InitModels(db *gorm.DB) error {
+	if err := db.AutoMigrate(
+		&Author{},
+		&Category{},
+	); err != nil {
+		return err
+	}
+
+	return nil
+}
